jupterlab/jupyterlab-svc.yaml
apiVersion: v1
kind: Service
metadata:
  name: jupyterlab
  labels:
    name: jupyterlab
    #annotations:
    #cloud.google.com/neg: '{"ingress": true}'
spec:
  type: NodePort
  selector:
    app: jupyterlab
  ports:
    - port: 8888
      targetPort: 8888
      nodePort: 30024
      protocol: TCP
      name: jupyterlab
