jupterlab/ingress-jupyter.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: jup-ingress
spec:
  rules:
  - host: jup.devops.to
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: jupyterlab
            port:
              number: 8888
